# mnist-digit-classifier

./: .gitignore  main.py  mnist_digit_classifier.ipynb  pyproject.toml
src/: data_loader.py  main.py  mnist_digit_classifier.ipynb  mnist_digit_classifier.py  train.py
